Works-Slider: added fancybox

--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
         "yargs": "^13.2.4"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "https://github.com/fancyapps/fancybox.git",
+        "bootstrap": "^4.3.1",
         "jquery": "^3.4.1",
         "popper.js": "^1.15.0",
-        "bootstrap": "^4.3.1",
         "slick-carousel": "^1.8.1"
     }
 }
